--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,46 +1,88 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        <link rel="stylesheet" href="{{asset('assets/css/bootstrap.css')}}">
-        {% block stylesheets %}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+    <link rel="stylesheet" href="{{asset('assets/css/bootstrap(2).css')}}">
+    {% block stylesheets %}
+    {% endblock %}
 
-        {% block javascripts %}
+    {% block javascripts %}
 
-        {% endblock %}
-    </head>
-    <body>
-    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">SymBook</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link " href="{{url('app_livres')}}">Livres
-            <span class="visually-hidden">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Catégories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href=""></a>
-        </li>
-        
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-    <div class="container mt-3">
-        {% block body %}
-        {% endblock %}
+    {% endblock %}
+</head>
+<body>
+<nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#" style="background: linear-gradient(to right, #49243E, #D862BC); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Bookland</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link " href="{{url('app_home')}}">Home
+                        <span class="visually-hidden">(current)</span>
+                    </a>
+                </li>
+                {% if is_granted('ROLE_ADMIN') %}
+                <li class="nav-item">
+                    <a class="nav-link " href="{{url('app_livres')}}">Livres
+                        <span class="visually-hidden">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url('app_categories')}}">Catégories</a>
+                </li>
+                 {% endif %}
+                 {% if is_granted('ROLE_USER') %}
+                <li class="nav-item">
+                    <a class="nav-link " href="{{url('app_list_livres')}}">Livres
+                        <span class="visually-hidden">(current)</span>
+                    </a>
+                </li>
+                {% endif %}
+                
+                {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Admin Link</a>
+                    </li>
+                {% endif %}
+            </ul>
+            <ul class="navbar-nav me-ml">
+            {% if is_granted('ROLE_USER') %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url('panier_afficher')}}">Panier
+                        <span class="visually-hidden">(current)</span>
+                    </a>
+                </li>
+                {% endif %}
+                {% if app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url('app_logout')}}">Déconnexion</a>
+                    </li>
+                {% endif %}
+
+                {% if not app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url('app_register')}}">S'inscrire
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{{url('app_login')}}">Connexion
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
-    </body>
+    </div>
+</nav>
+<div class="container mt-3">
+    {% block body %}
+    {% endblock %}
+</div>
+</body>
 </html>
