--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,49 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-    <link rel="stylesheet" href="{{asset('assets/css/bootstrap(2).css')}}">
-    {% block stylesheets %}
-    {% endblock %}
-
-    {% block javascripts %}
-
-    {% endblock %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/home.css') }}">
+   
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
+<nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light" style="height:90px">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="background: linear-gradient(to right, #49243E, #D862BC); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Bookland</a>
+        <a class="navbar-brand" href="{{ url('app_home') }}" style="background: linear-gradient(to right, #FF0080, #FF5F00); -webkit-background-clip: text; -webkit-text-fill-color: transparent;font-size : 30px; font-family:Times new roman">Bookland</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link " href="{{url('app_home')}}">Home
-                        <span class="visually-hidden">(current)</span>
-                    </a>
+                    
                 </li>
                 {% if is_granted('ROLE_ADMIN') %}
-                <li class="nav-item">
-                    <a class="nav-link " href="{{url('app_livres')}}">Livres
-                        <span class="visually-hidden">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{url('app_categories')}}">Catégories</a>
-                </li>
-                 {% endif %}
-                 {% if is_granted('ROLE_USER') %}
-                <li class="nav-item">
-                    <a class="nav-link " href="{{url('app_list_livres')}}">Livres
-                        <span class="visually-hidden">(current)</span>
-                    </a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{{ url('app_livres') }}">Livres
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url('app_categorie_index') }}">Catégories</a>
+                    </li>
                 {% endif %}
-                
+                <li class="nav-item" style="margin-left:50px">
+                    <a class="nav-link " href="{{ url('app_list_livres') }}"><i class="fa fa-book" style="color: black;font-size:24px"></i>
+                       <strong>Livres</strong> <span class="visually-hidden">(current)</span>
+                    </a>
+                </li>
                 {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-item">
                         <a class="nav-link" href="#">Admin Link</a>
@@ -51,27 +42,22 @@
                 {% endif %}
             </ul>
             <ul class="navbar-nav me-ml">
-            {% if is_granted('ROLE_USER') %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url('panier_afficher')}}">Panier
-                        <span class="visually-hidden">(current)</span>
-                    </a>
+                    <a class="nav-link" href="{{ url('panier_afficher') }}"><i class="fa fa-shopping-cart" style="color: black;font-size:24px"></i></a>
                 </li>
-                {% endif %}
                 {% if app.user %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url('app_logout')}}">Déconnexion</a>
+                        <a class="nav-link" href="{{ url('app_logout') }}"><i class="fas fa-sign-out-alt" style="color: black;font-size:24px"></i></a>
                     </li>
                 {% endif %}
-
                 {% if not app.user %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url('app_register')}}">S'inscrire
+                        <a class="nav-link" href="{{ url('app_register') }}">S'inscrire
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="{{url('app_login')}}">Connexion
+                        <a class="nav-link " href="{{ url('app_login') }}">Connexion
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
@@ -80,7 +66,8 @@
         </div>
     </div>
 </nav>
-<div class="container mt-3">
+<div class="mt-3">
+
     {% block body %}
     {% endblock %}
 </div>
