--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,13 +2,85 @@
 
 {% block title %}Hello HomeController!{% endblock %}
 
+
 {% block body %}
-<h1>Bienvenue sur le site de vente de livre Symbook</h1>
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem tempora laborum, tenetur impedit facilis quam at iste ullam aliquid accusamus, suscipit deleniti corporis cupiditate nam nemo eveniet. Totam, mollitia autem.
-Nihil a in suscipit. Nam adipisci, impedit officia, facere pariatur perspiciatis odit facilis veniam amet molestiae suscipit a quia quasi deleniti animi tempora in. Est natus laborum perferendis possimus debitis.
-Animi dolores maiores alias necessitatibus nam, amet dignissimos accusamus, velit reiciendis minus delectus doloribus est accusantium doloremque consequatur asperiores iste? Eius quae harum repudiandae, delectus exercitationem ad maiores libero quia!
-Quos dolorum blanditiis accusantium impedit quam, officiis perferendis. Quis debitis fugit maxime voluptate nam tempora, temporibus necessitatibus! Repellendus ipsum vel alias dignissimos odio voluptas, quam ex quis temporibus quae sed!
-Excepturi ipsum rem harum aliquid ipsam, debitis dolore eos temporibus laboriosam necessitatibus, fuga amet vero libero impedit nam voluptatibus vel saepe veniam quis consequatur. Numquam quisquam earum sapiente rerum eius.
-Pariatur modi esse ab, id iusto tempora, labore earum recusandae, fuga voluptates explicabo illum veniam praesentium. Sunt totam doloribus omnis. In mollitia ad, sequi laboriosam itaque quasi quaerat nam minima?
-Praesentium cupiditate nobis laboriosam debitis, fuga, earum illo aliquam delectus id voluptatibus nesciunt! Repellendus in inventore quidem ipsum, tempore itaque neque doloremque veritatis tenetur odit quae expedita illum? Nostrum, reprehenderit!
-{% endblock %}
+<header class="masthead text-white text-center" style="background-color: #DA0C81;height:750px;margin-top:-20px">
+            <div class="container d-flex align-items-center flex-column" >
+                <!-- Masthead Avatar Image-->
+                <img class="masthead-avatar mb-5" src="{{ asset('assets/images/book.jpg') }}" />
+                <!-- Masthead Heading-->
+                <h1 class="masthead-heading text-uppercase mb-0" style="color:#A3D8FF">Bienvenue</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon"><i class="fas fa-comment"></i></div>
+                  <div class="divider-custom-line"></div>
+              </div>
+                <!-- Masthead Subheading-->
+                <p class="masthead-subheading font-weight-light mb-0">Systéme de gestion des Films</p>
+            </div>
+        </header>
+        <!-- Portfolio Section-->
+        <section class="page-section portfolio" id="portfolio">
+            <div class="container">
+                <!-- Portfolio Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">À propos</h2>
+                <!-- Icon Divider-->
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                  <div class="divider-custom-line"></div>
+              </div>
+              
+              <!-- About Section Content-->
+              <div class="row">
+                  </div>
+              <!-- About Section Button-->
+              <div class="text-center mt-4">
+                 
+              </div>
+            </div>
+        </section>
+        <!-- About Section-->
+        
+        <!-- Contact Section-->
+       
+        <!-- Footer-->
+        
+        <!-- Copyright Section-->
+        <div class="copyright py-4 text-center text-white">
+            <div class="container"><small>Copyright &copy; Your Website 2024</small></div>
+        </div>
+        <!-- Portfolio Modals-->
+        <!-- Portfolio Modal 1-->
+        <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-labelledby="portfolioModal1" aria-hidden="true">
+          <div class="container">
+            <!-- About Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <!-- About Section Content-->
+            <div class="row">
+                <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
+                <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+            </div>
+            <!-- About Section Button-->
+            <div class="text-center mt-4">
+               
+            </div>
+        </div>
+        </div>
+        <!-- Portfolio Modal 2-->
+        
+        <!-- Portfolio Modal 5-->
+        
+        <!-- Portfolio Modal 6-->
+        
+        <!-- Bootstrap core JS-->
+        
+    {% endblock %}
