--- a/templates/list_livres/index.html.twig
+++ b/templates/list_livres/index.html.twig
@@ -1,23 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ListLivresController!{% endblock %}
+{% block title %}Liste des livres{% endblock %}
 
 {% block body %}
+<div class="container">
 <div class="row">
-{% for livre in livres %}
-  <div class="col-sm-4">
-    <div class="card" style="width: 18rem;">
-      <img src="{{ asset('assets/images/'~ livre.image) }}" class="card-img-top" alt="..." style="height: 400px; width: 287px; object-fit: cover;">
-      <div class="card-body">
-        <h5 class="card-title">{{livre.titre | capitalize}}</h5>
-        <p class="card-text">{{livre.prix}} DT</p>
-        <div class="card-body">
-          <a href="{{url('app_livre_details',{'id':livre.id})}}" class="card-link">Voir détails</a>
-          <a href="{{url('panier_ajouter',{'id':livre.id})}}" class="card-link">Ajouter au panier</a>
+    {% for livre in pagination %}
+        <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+                <img src="{{ asset('assets/images/' ~ livre.image) }}" class="card-img-top" alt="..." style="height: 400px; width: 287px; object-fit: cover;">
+                <div class="card-body">
+                    <h5 class="card-title">{{ livre.titre | capitalize }}</h5>
+                    <p class="card-text">{{ livre.prix }} DT</p>
+                    <div class="card-body">
+                        <a href="{{ path('app_livre_details', {'id': livre.id}) }}" class="card-link"><button class="btn btn-light" style="background-color : #FF5580;color:black"><i class="fas fa-eye"></i></button></a>
+                        <a href="{{ path('panier_ajouter', {'id': livre.id}) }}" class="card-link"><button class="btn btn-light" style="background-color : #FF8A08;color:black"><i class="fas fa-cart-plus"></i></button></a>
+                    </div>
+                </div>
+            </div>
+            <br>
         </div>
-      </div>
-    </div><br>
-  </div>
-{% endfor %}
+    {% endfor %}
+</div>
+
+
+{{ knp_pagination_render(pagination) }}
 </div>
 {% endblock %}
