--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,9 +2,123 @@
 
 {% block title %}Log in!{% endblock %}
 
+
+
+
 {% block body %}
-<form method="post">
-    {% if error %}
+<style>
+
+.login-block {
+    background: #4F6F52;
+    background: -webkit-linear-gradient(to bottom, #BFD8AF, #99BC85);
+    background: linear-gradient(to bottom, #FF0080, #FFCBCB);
+    float: left;
+    width: 100%;
+    padding: 50px 0;
+}
+
+.banner-sec {
+    
+    min-height: 50px;
+    border-radius: 0 10px 10px 0;
+    padding: 0;
+   
+   
+}
+
+.container {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 15px 20px 0px rgba(0, 0, 0, 0.1);
+    width: 1000px;
+    
+   
+}
+
+.carousel-inner {
+    border-radius: 0 10px 10px 0;
+}
+
+.carousel-caption {
+    text-align: left;
+    left: 5%;
+}
+
+
+.login-sec {
+    padding: 50px 30px;
+    position: relative;
+}
+
+.login-sec .copy-text {
+    position: absolute;
+    width: 80%;
+    bottom: 20px;
+    font-size: 13px;
+    text-align: center;
+}
+
+
+
+.login-sec h2 {
+    margin-bottom: 30px;
+    font-weight: 800;
+    font-size: 30px;
+    color: #FF0080;
+}
+
+.login-sec h2:after {
+    content: " ";
+    width: 100px;
+    height: 5px;
+    background: #002379;
+    display: block;
+    margin-top: 20px;
+    border-radius: 3px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn-login {
+    background: #FF0080;
+    color: #fff;
+    font-weight: 600;
+}
+
+.banner-text {
+    width: 70%;
+    position: absolute;
+    bottom: 200px;
+    padding-left: 20px;
+}
+
+.banner-text h2 {
+    color: #fff;
+    font-weight: 600;
+}
+
+.banner-text h2:after {
+    content: " ";
+    width: 100px;
+    height: 5px;
+    background: #FFF;
+    display: block;
+    margin-top: 20px;
+    border-radius: 3px;
+}
+
+
+
+</style>
+
+<section class="login-block" style="margin-top:-25px">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 login-sec">
+                <h2 class="text-center">Se connecter</h2>
+               <form method="post">
+
+               {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
@@ -14,18 +128,40 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
+                    <div class="form-group">
+                        <label for="inputEmail" >Nom d'utilisateur</label>
+                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus/><br><br>
+                        </div>
+                    <div class="form-group">
+                        <label for="inputPassword">Mot de passe</label>
+                        <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required><br><br>
+                        <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+                        </div>
+                    <button type="submit" class="btn btn-login float-right">Valider</button>
+                </form>
+                <p-toast></p-toast>
+            </div>
+            <div class="col-md-8 banner-sec">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="https://i.pinimg.com/736x/8f/a7/f7/8fa7f77e31bc9579359569c7192a7901.jpg" >
+                            <div class="carousel-caption d-none d-md-block">
+                                <div class="banner-text">
+                                    <h2>Bienvenue</h2>
+                                    <p>                                                                                                                                             </p>
+                                </div>	
+                            </div>
+                        </div>
+                        <!-- Add your other carousel items here -->
+                    </div>
+                </div>	   
+            </div>
+            
+        </div>
+    </div>
+</section>
 {% endblock %}
