--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Hello CategoriesController!{% endblock %}
 
 {% block body %}
+<div class="container">
 <h1>Liste de Catégories</h1>
 <ul>
 {% for cat in categories %}
@@ -11,5 +12,6 @@
     
      
 {% endfor %}
-</ul>   
+</ul>  
+</div> 
 {% endblock %}
