--- a/templates/categorie/edit.html.twig
+++ b/templates/categorie/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Categories{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Edit Categories</h1>
 
     {{ include('categorie/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a href="{{ path('app_categorie_index') }}">back to list</a>
 
     {{ include('categorie/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
