--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -3,9 +3,10 @@
 {% block title %}Categories{% endblock %}
 
 {% block body %}
-    <h1>Categories index</h1>
-
-    <table class="table">
+<div class="container">
+    <br><br>
+<a href="{{ path('app_categorie_new') }}"><button class="btn btn-light" style="background-color:#BACD92"><i class="fa fa-plus"></i></button></a><br><br>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
@@ -13,6 +14,7 @@
                 <th>Slug</th>
                 <th>Descripton</th>
                 <th>actions</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -23,9 +25,10 @@
                 <td>{{ category.slug }}</td>
                 <td>{{ category.descripton }}</td>
                 <td>
-                    <a href="{{ path('app_categorie_show', {'id': category.id}) }}">show</a>
-                    <a href="{{ path('app_categorie_edit', {'id': category.id}) }}">edit</a>
-                </td>
+                    <a href="{{ path('app_categorie_show', {'id': category.id}) }}"><button class="btn btn-light" style="background-color : #6DC5D1;color:black"><i class="fas fa-eye"></i></button></a></td>
+                    <td><a href="{{ path('app_categorie_edit', {'id': category.id}) }}"><button class="btn btn-light" style="background-color : #FFB1B1;color:black"><i class="fas fa-edit"></i></button></a></td>
+                    
+                
             </tr>
         {% else %}
             <tr>
@@ -35,5 +38,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_categorie_new') }}">Create new</a>
+    
+    </div>
 {% endblock %}
