--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -3,14 +3,55 @@
 {% block title %}Commande n°{{ commande.id }}{% endblock %}
 
 {% block body %}
-<h1></h1>
+<style>
+    body {
+        /* background: linear-gradient(to bottom, #faf0e6, #FFC371);  Remplacez ces couleurs par celles de votre choix */
+        background-color: #fff;
+    }
+    .card-gradient {
+        background-color: #f7f7f7; /*Remplacez ces couleurs par celles de votre choix */
+    }
+</style>
+<div class="container">
+    <div class="card-container">
+        <div class="d-flex">
+            
+        <div class="card  mb-5" style="width: 550px;margin-right:50px;margin-top:20px">
+            <div class="card-header text-center">
+                Details commande
+            </div>
+            <div class="card-body">
+                {% for ligneCommande in commande.ligneCommandes %}
+                    <div class="d-flex align-items-start mb-5">
+                        <img src="{{ asset('assets/images/' ~ ligneCommande.livre.image) }}" class="mr-3" alt="..." style="height: 140px; width: 80px; object-fit: cover;">
+                        <div class='container'>
+                            <strong>Prix :{{ ligneCommande.livre.prix }} DT</strong> 
+                            <p><strong>{{ ligneCommande.livre.titre }}</strong></p>
+                            <p>Quantité : {{ ligneCommande.quantite }}</p>
+                        </div>
+                    </div>
+                    {% if not loop.last %}
+                        <hr> 
+                    {% endif %}
+                {% endfor %}
+            </div>
+           
+       
 
-<h2>Articles commandés :</h2>
-<ul>
-    {% for ligneCommande in commande.ligneCommandes %}
-        <li>
-            Livre : {{ ligneCommande.livre.titre }} (quantité : {{ ligneCommande.quantite }})
-        </li>
-    {% endfor %}
-</ul>
+    </div>
+        <div class="card  mb-5 ml-3" style="width: 300px;height:320px;margin-top:80px;margin-left:90px">
+            
+            <div class="card-body">
+                <img src="https://i.pinimg.com/736x/3e/7c/98/3e7c98371f29b9759493d409d7d5968d.jpg" class="mr-3" alt="..." style="height: 160px; width: 270px; object-fit: cover;">
+                
+                <a href="{{url('checkout',{'total':total,'commande':commande.id})}}"><button class="btn btn-light" style="margin-left :80px;margin-bottom :20px;margin-top :30px;width:140px;background-color : #FF5580;" >Payer</button></a> <br>
+               
+            </div>
+            <div class="card-footer text-body text-align-center">
+                <strong>Total: {{total}} DT</strong>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
 {% endblock %}
