--- a/templates/list_livres/detailsLivre.html.twig
+++ b/templates/list_livres/detailsLivre.html.twig
@@ -1,20 +1,152 @@
 {% extends "base.html.twig" %}
 {% block title %}Detailes LivresController!{% endblock %}
 {% block body %}
-<div class="container mt-3">
-  
-  <div class="row">
-    <div class="col-md-6 mt-4">
-      <img src="{{ asset('assets/images/' ~ livre.image) }}" width="400" height="500">
+<style>
+  @import url(https://fonts.googleapis.com/css?family=Poppins:400,300,500);
+
+section.card {
+  background: #fbf0f0;
+  background: -webkit-linear-gradient(to right, #fbf0f0, #f7f7f7); 
+  background: linear-gradient(to right, #fbf0f0, #f7f7f7);
+  border-radius: 24px 24px 24px 48px;
+  padding: 30px 30px 30px 308px;
+  margin: 50px 0;
+width: 1000px;
+  display: flex;
+  flex-direction: row;
+  align-self: flex-start;
+  position: relative;
+  box-shadow: 5px 0 0 0 rgba(204,204,204,0.3), -5px 0 0 0 rgba(204,204,204,0.3), 0 5px 0 0 rgba(204,204,204,0.3);
+}
+section.card .text-content {
+  display: flex;
+  flex-direction: column;
+  width:calc(60vw - 192px);
+}
+section.card .text-content h2 {
+  margin: 0;
+  font-size: 2em;
+  max-width: 15ch;
+  color: black;
+}
+section.card .text-content p {
+  margin: 25px 0 24px;
+  color: black;
+}
+
+section.card .visual {
+  width: 240px;
+  height: 100%;
+  position: absolute;
+  top: -24px;
+  left: 24px;
+  overflow: hidden;
+  border-radius: 24px;
+}
+section.card .visual img {
+  height: 110%;
+}
+article {
+  margin: auto;
+  display: block;
+  width:calc(60vw + 248px);
+  max-width:calc(920px + 248px);
+  min-width:calc(640px + 248px); 
+}
+@media all and (max-width: 1100px) {
+  body {
+    padding: 96px 48px 24px;
+  }
+  article {
+    width: 100%;
+    min-width: 100%;
+  }
+  section.card {
+    min-width: 100%;
+  }
+  section.card .text-content {
+    width: 100%;
+  }
+}
+@media all and (max-width: 720px) {
+  body {
+    padding: 48px 24px 0;
+  }
+  section.card {
+    margin: 64px 0;
+    padding: 88px 36px 36px;
+    flex-direction: column;
+    border-radius: 24px;
+  }
+  section.card .text-content h3 {
+    max-width:calc(100% - 150px);
+    font-size: 1em;
+  }
+  section.card .text-content p,
+  section.card .text-content a {
+    font-size: 0.8em;
+  }
+  section.card .visual {
+    width: 150px;
+    height: 150px;
+    right: 16px;
+    left: auto;
+    border-radius: 50%;
+  }
+  section.card .visual img{
+    width: 100%;
+    height: auto;
+    }
+}
+
+</style>
+
+
+
+<article>
+  <section class="card">
+    <div class="text-content">
+      <h2>{{livre.titre}}</h2> <p><strong>Editeur : </strong>{{livre.editeur}}</p>
+      <p>{{livre.resume}}</p>  
+      <p><strong>Prix : </strong>{{livre.prix}} DT</p>
+      
+                        
+      <a href="{{url('panier_ajouter',{'id':livre.id})}}" ><button class="btn btn-light" style="background-color : #FFAF61;color:black;font-size:25px"><i class="fa fa-plus"></i></button></a>
     </div>
-    <div class="col-md-6"><br><br><br><br><br>
-    <h1 style="color:#4D2DB7">{{livre.titre | capitalize}}</h2><br><br><br><br>
-      <p><strong style="font-size:20px;color:#4D2DB7">Editeur :</strong> {{livre.editeur}}</p>
-      <p><strong style="font-size:20px;color:#4D2DB7">Prix :</strong> {{livre.prix}} D</p>
-      <p><strong style="font-size:20px;color:#4D2DB7">Date d'édition :</strong> {{livre.dateEdition | date('d/m/Y')}}</p>
-     <a href="{{url('panier_ajouter',{'id':livre.id})}}" class="card-link"><button class="btn btn-outline-primary">Ajouter au panier</button></a>
-      <p><strong style="font-size:20px;color:#"></p>
+    <div class="visual">
+      <img src="{{ asset('assets/images/' ~ livre.image) }}" alt="" />
+    </div>
+  </section> 
+
+
+
+<hr> 
+  <div class="row g-6">
+    <div class="col-md-8">
+      <h3>Liste des avis</h3>
+      {% if avis is not empty %}
+        {% for a in avis %}
+          <div class="col-md-8 row g-7">
+            {{ app.user.email }} <input type="text" class="form-control" value="{{ a.message }}" disabled style="margin-bottom:20px">
+          </div>
+        {% endfor %}
+      {% else %}
+        <p>Aucun avis disponible pour ce livre.</p>
+      {% endif %}
+      
+      <form class="row g-7" action="{{ path('app_livre_avis', {'id': livre.id}) }}" method="post">
+        <div class="col-md-8">
+          <label for="inputComment" class="form-label">Commentaire</label>
+          <textarea class="form-control" id="inputComment" placeholder="Saisissez votre commentaire" aria-label="Votre commentaire" name="avis" rows="5"></textarea>
+          <button type="submit" class="btn btn-light" style="background-color: black; color: white;margin-top:20px"><i class="fas fa-paper-plane"></i></button>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-4">
+      <img src="{{ asset('assets/images/commentaire.jpg') }}" alt="Votre image" class="img-fluid" style="margin-top:50px">
     </div>
   </div>
-</div>
+</article>
+
+    
 {% endblock %}
