--- a/templates/livres/show.html.twig
+++ b/templates/livres/show.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="containe mt-3">
 <h2>Le detaille du {{livre.titre | capitalize}}</h2>
-<img src={{livre.image}} width="300" height="200"><br>
+<img src="{{ asset('assets/images/' ~ livre.image) }}" class="card-img-top" alt="..." style="height: 300px; width: 287px; "><br>
  ISBN :<td>{{livre.isbn}}</td><br>
 Editeur :<td>{{livre.editeur}}</td><br>
 Prix :<td>{{livre.prix}} D</td><br>
